# my_asb_cowork

./: .env.example  README.md  pyproject.toml
docs/: vps-setup.md
scripts/: common.sh  fetch_news_full.py  morning.sh  process.sh
src/d_brain/: config.py
src/d_brain/bot/: keyboards.py  main.py  states.py
src/d_brain/bot/handlers/: buttons.py  commands.py  document.py  food.py  forward.py  news.py  text.py  video.py
src/d_brain/services/: nutrition.py
src/d_brain/web/: app.py
vault/.claude/skills/vault-health/scripts/: generate_moc.py
